# Training_Scripts

./: README.md  README_RUNPOD.md  README_YOLO12.md  deep_svdd_gui.py  image_augmentation_gui.py  pyproject.toml  requirements.txt  requirements_rtdetr.txt  requirements_yolo12.txt  rtdetr_quick_start.py  runpod_train.py  setup_runpod.py  train_fasterrcnn.py  train_nails.ps1  yolo12_dataset.yaml  yolo12_dataset_converter.py  yolo12_train.py
cloud/runpod/: runpod_launcher.py  runpod_train.py
detection/: __init__.py
detection/datasets/: __init__.py  coco.py  factory.py  voc.py
detection/utils/: __init__.py  coco_eval.py  ema.py  engine.py  transforms.py
examples/: quick_start.py  train_nails.ps1
requirements/: requirements_augmentation.txt  requirements_deep_svdd.txt  requirements_runpod.txt  requirements_yolo12.txt
rfdetect/: __init__.py  autotrain_gui.py  cli.py  gui.py
rfdetect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
training/deep_svdd/: One_Class_Classification.py  README.md
training/fasterrcnn/: README.md  train_fasterrcnn.py
training/rtdetr/: README.md  rtdetr_train.py
training/yolo12/: README.md  yolo12_dataset_converter.py  yolo12_quick_start.py
